Fix cover page layout shift

--- a/_sass/hydejack/_sidebar.pre.scss
+++ b/_sass/hydejack/_sidebar.pre.scss
@@ -17,6 +17,7 @@ hy-drawer {
   width: 100%; // inline
   position: relative; // inline
   overflow: hidden; // inline
+  display: block; // inline
   z-index: 4; // inline
 
   @media screen {
